# gitcs

./: .gitignore  README.md  config.yaml  gitcs.py  pyproject.toml
funcs/: fileio.py
modules/: giteecs.py  githubcs.py  gitlabcs.py
